--- a/Tugas11Nomor3/src/main/java/calc/Main.form
+++ b/Tugas11Nomor3/src/main/java/calc/Main.form
@@ -47,6 +47,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="inputs">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="inputsKeyPressed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="buttonOptions">
       <Properties>
